Performance optimization of Get-BcArtifactUrl
Get-BcContainerEventLog now copies the eventlog to HostHelperFolder\EventLogs instead of my folder to avoid blocking container deletion
Remove Application Roles from bacpacs (re. VA1246 - https://docs.microsoft.com/en-us/azure/azure-sql/database/sql-database-vulnerability-assessment-rules)
Issue #2245 - UnInstall-BcContainerApp -doNotSaveData fails

3.0.0
Enable Telemetry. BcContainerHelper will emit usage statistics telemetry to Microsoft for all commands used.
$bcContainerHelperConfig.SendExtendedTelemetryToMicrosoft = $true will emit extended telemetry to Microsoft
Flush-ContainerHelperCache does not run docker image prune unless keepdays is 0 (= flush all)

2.0.23
Issue #2210 Removing Desktop shortcuts in a folder fails if the desktop is setup for onedrive sync
Run-TestsInBcContainer was hardcoded to use Romance Standard Time as timezone for the user - use the session timezone instead
Issue #2215 Add parameter -doNotIgnoreInfos to Run-AlCops (and ignore infos by default)
Modify Run-AlValidation to validate in the same way as the AppSource Validation Service

2.0.22
Issue #2206 new-bccontainer with importtesttoolkit sometimes fails containername is not bcserver

2.0.21
Increasing version number to avoid locking issues wil applicationInsights DLL

2.0.20
Add support for using Docker Volumes for HostHelperFolder, BcArtifacts Cache folder and my folder
Fix to Create-AadAppsForBC for this breaking change in AzureAD https://docs.microsoft.com/en-us/azure/active-directory/develop/reference-breaking-changes#appid-uri-in-single-tenant-applications-will-require-use-of-default-scheme-or-verified-domains
Issue #2187 New-BcContainer error when including "-includePerformanceToolkit" parameter (and -imageName)

2.0.19
New-BcAuthContext displays wrongly decoded names as accessToken is UTF8 encoded
Issue #2181 Fix encoding when using Get-Content
Issue #2035 SharedEncryptionKey feature doesn't always work across versions