@@ -5,6 +5,8 @@ Performance optimization of Get-BcArtifactUrl
 Get-BcContainerEventLog now copies the eventlog to HostHelperFolder\EventLogs instead of my folder to avoid blocking container deletion
 Remove Application Roles from bacpacs (re. VA1246 - https://docs.microsoft.com/en-us/azure/azure-sql/database/sql-database-vulnerability-assessment-rules)
 Issue #2245 - UnInstall-BcContainerApp -doNotSaveData fails
+Add parameter -GrantAdminConsent to Create-AadAppsForBC
+Use Microsoft Graph API (instead of deprecated Azure AD Graph API) in Create-AadAppsForBC
 
 3.0.0
 Enable Telemetry. BcContainerHelper will emit usage statistics telemetry to Microsoft for all commands used.
